# DynamicReflexiveMemory

./: .gitignore  CHANGELOG.md  README-DEV.md  README.md  docker-compose.yml  drmblueprint.md  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
config/: __init__.py  config.example.json  logging.conf  settings.py
core/: __init__.py  controller.py  exceptions.py  health.py  live_loop.py  memory_manager.py  prompt_engine.py  review.py  task_executor.py  telemetry.py  user_settings.py
gui/: __init__.py  app.py  settings_dialog.py
models/: __init__.py  memory.py  workflows.py
scripts/: seed_memory.py
tests/: __init__.py  test_chroma_integration.py  test_cli_smoke.py  test_config_persistence.py  test_controller.py  test_health.py  test_live_task_loop.py  test_memory_revisions.py  test_prompt_engine.py  test_redis_integration.py  test_review_engine.py  test_semantic_graph.py  test_settings.py  test_task_executor.py  test_user_settings.py
