[build-system]
requires = ["setuptools>=65", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dynamic-reflexive-memory"
version = "0.1.0"
description = "Dynamic Reflexive Memory core application"
requires-python = ">=3.12"
dependencies = []

[tool.mypy]
python_version = "3.12"
show_error_codes = true
warn_unused_configs = true

[[tool.mypy.overrides]]
module = [
    "core.*",
    "config.*",
    "models.*",
]
strict = true

[[tool.mypy.overrides]]
module = [
    "gui.*",
    "scripts.*",
]
disallow_untyped_defs = true
warn_return_any = true

[[tool.mypy.overrides]]
module = [
    "chromadb.*",
    "redis.*",
    "litellm.*",
    "PySide6.*",
    "openai.*",
]
ignore_missing_imports = true
